--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -38,3 +38,14 @@ number_separator:
 function_parameter_count:
   warning: 6
   error: 9
+attributes:
+  always_on_line_above:
+    - "@objc"
+    - "@nonobjc"
+    - "@available"
+    - "@discardableResult"
+  always_on_same_line:
+    - "@IBOutlet"
+    - "@IBAction"
+    - "@NSManaged"
+    - "@testable"
